Fixing gap on profile page

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -6,7 +6,7 @@
 
 #posts{
     position: relative;
-    top: 42%;
+    top: 20%;
     left: 10%;
 }
 
